# readarr_send_to_kindle

./: README.md  execute_script.py  main.py  pyproject.toml
